[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/DialogBox.gd" type="Script" id=1]
[ext_resource path="res://src/font/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/sound/text.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[node name="DialogBox" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Rect" type="Panel" parent="."]
show_behind_parent = true
margin_left = -100.0
margin_top = -45.0
margin_right = -64.0
margin_bottom = -9.0
rect_rotation = 45.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
margin_left = -105.0
margin_top = -65.0
margin_right = 105.0
margin_bottom = 75.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = -95.0
margin_top = -55.0
margin_right = 95.0
margin_bottom = 65.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
visible_characters = 0
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="SpeakSoundTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="SpeakSoundTimer" to="." method="_on_SpeakSoundTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
